styles.global.css
/* ... */
.product_meta a:hover {
    color: rgb(var(--color-primary));
}

.product-info .button.icon {
    margin-left: 0;
    margin-right: 10px;
    min-width: 36px;
    min-height: 36px;
    padding-left: 0.6em;
    padding-right: 0.6em;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    font-size: 12px;
    border-width: 1px;

}


.product-section {
    border-top: 0;
    margin-top: 0;
    margin-bottom: 20px;
}

.product-section .entry-content {
    padding-top: 0;
}

.product-section .product-section-title,
.product-section .col>h5 {
    font-size: 1.2rem;
    letter-spacing: 0px;
    margin-top: 0;
    position: relative;
    padding: 0;
    margin-bottom: 20px;
}

.product-section:first-child .entry-content {
    padding-top: 0;
}

/* Product thumbnails ------ */

.single-product .product-thumbnails .flickity-slider>.col {
    max-width: calc(100% / 6);
    padding: 0 5px 0;
}


.single-product .product-thumbnails img {
    opacity: 1;
    margin-bottom: 0;
    border: 0px;
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
}

.single-product .product-thumbnails .is-nav-selected img,
.single-product .product-thumbnails img:hover {
    transform: none;
    border: 0px;
}

.single-product .product-thumbnails a {
    background-color: rgb(var(--bg-2nd));
    border: 1px solid rgb(var(--color-border-1), 10%);
    border-radius: 7px;
    transition: 320ms all;
    position: relative;
    padding-top: 100%;
    height: unset;
}

.single-product .product-thumbnails .is-nav-selected a,
.single-product .product-thumbnails a:hover {
    border-color: rgb(var(--color-border-1));
    transform: none;
}


/*  Review ---- */
.product-section .col:not(.product-small) {
    max-width: 100%;
    flex-basis: 100%;
}

/* Ux - Swatches */
body .ux-swatches {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 8px 10px;

    --color-border: #d5d5d5;
    --color-text: #111;
    --color-border-hover: #999;
    --color-text-hover: #111;
    --color-border-selected: #ee0b0b;
    --color-text-selected: #ee0b0b;
}

body .ux-swatches .ux-swatch {
    margin: 0;
    min-height: 32px;
    min-width: 32px;
    padding: 4px 4px;
    font-size: 0.95rem;
    line-height: 1.1;
    box-shadow: 0 0 0 1px var(--color-border);
    color: var(--color-text);
    transition: 320ms all;
}

.ux-swatches .ux-swatch:hover:not(.selected):not(.disabled) {
    box-shadow: 0 0 0 1px var(--color-border-hover);
    color: var(--color-text-hover);
}

body .ux-swatches .ux-swatch.selected {
    box-shadow: 0 0 0 1px var(--color-border-selected);
    color: var(--color-text-selected);
}

body .variations td,
body .variations th {
    padding: 0 0 10px;
    font-size: 0.9rem;
}

.variations label {
    color: rgb(var(--color-text-title));
    font-weight: 600;
    font-size: inherit;
}

.variations .ux-swatch-selected-value {
    font-weight: normal;
    font-size: inherit;
}

.single_variation_wrap .woocommerce-variation-price {
    font-size: 1.1rem;
    padding: 16px 0;
}


/* Cart Page ----- */
.woocommerce-cart {
    --btn-mh: 44px;
    --border-color: rgb(var(--color-border-1), 15%);
    --border-title-color: rgb(var(--color-border-1));
    --bg-gray: rgb(var(--bg-2nd));
}

.woocommerce .shop_table a {
	color: inherit;
}

.cart_item .product-name a {
    color: rgb(var(--color-text-sub));
    font-weight: 500;
}

.woocommerce-cart .checkout_coupon .button {
    background-color: rgb(var(--bg));
    border: 1px solid var(--border-color);
    height: var(--btn-mh);
    border-radius: var(--radius-small);
    color: rgb(var(--color-text-title));
}

.woocommerce-cart main .button:not(.is-link, .is-form) {
    min-height: var(--btn-mh);
    align-items: center;
    justify-content: center;
    font-weight: 500;
    text-transform: unset;
    letter-spacing: 0;
    font-size: var(--size-small);
    border-radius: var(--radius-small);
    border-width: 1px;
    display: inline-flex;
}

.woocommerce .woocommerce-notices-wrapper .message-container .wc-forward {
    display: none;
}


/* Checkout Page ----- */
body.woocommerce-checkout,
.shop_table {
    --border-color: rgb(var(--color-border-1), 15%);
    --border-title-color: rgb(var(--color-primary));
    --bg-gray: rgb(var(--bg-2nd));
    --input-h: 50px;
}

body.woocommerce-checkout .input-text {
    height: var(--input-h);
    font-size: 16px;
    box-shadow: none;
    border: 1px solid var(--border-color);
    padding: 12px 15px;
}

body.woocommerce-checkout .woocommerce-invalid .input-text {
    border-color: var(--fs-color-alert);
}

body.woocommerce-checkout #ship-to-different-address {
    background-color: var(--bg-gray);
    padding: 10px 12px;
}


body.woocommerce-checkout .checkout_coupon .button {
    color: rgb(var(--bg));
    text-shadow: none;
    background-color: rgb(var(--bg-opposite));
    text-transform: unset;
    letter-spacing: 0;
    height: var(--input-h);
}

.woocommerce .shop_table td,
.woocommerce .shop_table th,
.woocommerce .shop_table thead th {
    border-width: 1px;
}

.woocommerce .shop_table thead th,
.woocommerce .shop_table .order-total th,
.woocommerce .shop_table .order-total td {
    padding-top: 17px;
    padding-bottom: 17px;
    border-color: var(--border-title-color);
}

button#place_order {
    font-size: 1rem;
    border-radius: var(--radius-small);
    font-weight: 600;
}

.wc-select-search-box {
    position: relative;
    margin-bottom: 1em;
}

.wc-select-search-box .el-curent-name {
    height: var(--input-h);
    font-size: 16px;
    box-shadow: none;
    border: 1px solid var(--border-color);
    padding: 12px 15px;
    overflow: hidden;
    text-overflow: ellipsis;
    cursor: pointer;
    position: relative;
}

.woocommerce-invalid .wc-select-search-box .el-curent-name {
    border-color: var(--fs-color-alert);
}
/* ... */

